# mantis

./: .gitmodules  Contents.m  LICENSE  Notes  README.md  WS_seg.m  _config.yml  batch_run.m  calvol.m  cfg_mantis_dirname.m  cfg_mantis_get_tpm.m  cfg_mantis_make_tpm.m  cfg_mantis_make_tpm_run.m  cfg_mantis_movetosubdir.m  cfg_mantis_movetosubdir_run.m  cfg_mantis_movetosubdir_vout.m  cfg_mantis_wm_clean.m  cfg_mantis_wm_clean_run.m  cfg_mantis_ws_csf.m  cfg_mantis_ws_csf_run.m  cfg_phase1_tissue_classification.m  cg_mantis.m  cg_mantis_defaults.m  cg_mantis_deformations.m  cg_mantis_deformations_run.m  cg_mantis_dirname.m  cg_mantis_firstnorm.m  cg_mantis_get_defaults.m  cg_mantis_get_tpm.m  cg_mantis_hardseg.m  cg_mantis_hardseg2.m  cg_mantis_hardseg2_run.m  cg_mantis_hardseg_run.m  cg_mantis_make_csf_mask.m  cg_mantis_make_csf_mask_run.m  cg_mantis_make_tpm.m  cg_mantis_make_tpm_run.m  cg_mantis_movetosubdir.m  cg_mantis_movetosubdir_run.m  cg_mantis_movetosubdir_vout.m  (+47 more)
.github/workflows/: main.yml
ITKStuff/: CMakeLists.txt  cleanWM.cxx  compareMasks.cxx  compareMasksSurf.cxx  ioutils.h  morphutils.h  neonateScalper.cxx  segCSF.cxx  vibes_common.h
ITKStuff/SuperBuild/: CMakeLists.txt  External_ITKv4.cmake  External_ITKv5.cmake  SuperBuild.cmake
_layouts/: default.html
contact/: index.md
css/: style.css
installation/: index.md
referencing/: index.md
template/: notes
using/: extraction.md  index.md  origin.md
